--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     
     <title>Frontend Mentor | IP Address Tracker</title>
   </head>
@@ -29,12 +31,12 @@
           <h2 class="timehzone__title">timezone</h2>
           <p class="timehzone__value"></p>
         </div>
-      </div>
         <div class="ipspecs_isp">
           <h2 class="isp__title">isp</h2>
           <p class="isp__value"></p>
         </div>
       </div>
+    </div>
     
   </header>
 
